# controllers/contact.js
@@ -1,94 +1,134 @@
 const mongodb = require('../db/connect');
 const ObjectId = require('mongodb').ObjectId;
+const passwordUtil = require('../config/passwordComplexityCheck');
 
-const getAll = async (req, res) => {
-  try {
-    const result = await mongodb.getDb().db().collection('contact').find();
-    result.toArray().then((lists) => {
+const getAll = (req, res) => {
+  mongodb
+    .getDb()
+    .db()
+    .collection('contact')
+    .find()
+    .toArray((err, lists) => {
+      if (err) {
+        res.status(400).json({ message: err });
+      }
       res.setHeader('Content-Type', 'application/json');
       res.status(200).json(lists);
     });
-  } catch (err) {
-    res.status(500).json({ message: err.message });
-  }
 };
 
-const getSingle = async (req, res) => {
-  try {
-    const contactId = new ObjectId(req.params.id);
-    const result = await mongodb.getDb().db().collection('contact').find({ _id: contactId });
-    result.toArray().then((lists) => {
-      res.setHeader('Content-Type', 'application/json');
-      res.status(200).json(lists[0]);
-    });
-  } catch (err) {
-    res.status(500).json(err);
+const getSingle = (req, res) => {
+  if (!ObjectId.isValid(req.params.id)) {
+    res.status(400).json('Must use a valid contact id to find a contact.');
   }
+  const contactId = new ObjectId(req.params.id);
+  mongodb
+    .getDb()
+    .db()
+    .collection('contact')
+    .find({ _id: contactId })
+    .toArray((err, result) => {
+      if (err) {
+        res.status(400).json({ message: err });
+      }
+      res.setHeader('Content-Type', 'application/json');
+      res.status(200).json(result[0]);
+    });
 };
 
 const createContact = async (req, res) => {
-  try {
-    const contact = {
-      firstName: req.body.firstName,
-      lastName: req.body.lastName,
-      email: req.body.email,
-      phone: req.body.phone,
-      role: req.body.role
-    };
-    const response = await mongodb.getDb().db().collection('contact').insertOne(contact);
-    if (response.acknowledged) {
-      res.status(201).json(response);
-    } else {
-      res.status(500).json(response.error || 'Some error occurred while creating the contact.');
-    }
-  } catch (err) {
-    res.status(500).json(err);
+  const contact = {
+    firstName: req.body.firstName,
+    lastName: req.body.lastName,
+    email: req.body.email,
+    phone: req.body.phone,
+    role: req.body.role,
+    username: req.body.username,
+    password: req.body.password
+  };
+
+  if (!req.body.username || !req.body.password) {
+    res.status(400).send({ message: 'Login details can not be empty!' });
+    return;
+  }
+  const password = req.body.password;
+  const passwordCheck = passwordUtil.passwordPass(password);
+  if (passwordCheck.error) {
+    res.status(400).send({ message: passwordCheck.error });
+    return;
+  }
+
+  const response = await mongodb.getDb().db().collection('contact').insertOne(contact);
+  if (response.acknowledged) {
+    res.status(201).json(response);
+  } else {
+    res.status(500).json(response.error || 'Some error occurred while creating the contact.');
   }
 };
 
 const updateContact = async (req, res) => {
-  try {
-    const contactId = new ObjectId(req.params.id);
-    // be aware of updateOne if you only want to update specific fields
-    const contact = {
-      firstName: req.body.firstName,
-      lastName: req.body.lastName,
-      email: req.body.email,
-      phone: req.body.phone,
-      role: req.body.role
-    };
-    const response = await mongodb
-      .getDb()
-      .db()
-      .collection('contact')
-      .replaceOne({ _id: contactId }, contact);
-    console.log(response);
-    if (response.modifiedCount > 0) {
-      res.status(204).send();
-    } else {
-      res.status(500).json(response.error || 'Some error occurred while updating the contact.');
-    }
-  } catch (err) {
-    res.status(500).json(err);
+  if (!ObjectId.isValid(req.params.id)) {
+    res.status(400).json('Must use a valid contact id to update a contact.');
+  }
+
+  const username = req.params.username;
+  if (!username) {
+    res.status(400).send({ message: 'Invalid Username Supplied' });
+    return;
+  }
+
+  const password = req.params.password;
+  const passwordCheck = passwordUtil.passwordPass(password);
+  if (passwordCheck.error) {
+    res.status(400).send({ message: passwordCheck.error });
+    return;
+  }
+
+  const contactId = new ObjectId(req.params.id);
+  // be aware of updateOne if you only want to update specific fields
+  const contact = {
+    firstName: req.body.firstName,
+    lastName: req.body.lastName,
+    email: req.body.email,
+    phone: req.body.phone,
+    role: req.body.role,
+    username: req.body.username,
+    password: req.body.password
+  };
+  const response = await mongodb
+    .getDb()
+    .db()
+    .collection('contact')
+    .replaceOne({ _id: contactId }, contact);
+  console.log(response);
+  if (response.modifiedCount > 0) {
+    res.status(204).send();
+  } else {
+    res.status(500).json(response.error || 'Some error occurred while updating the contact.');
   }
 };
 
 const deleteContact = async (req, res) => {
-  try {
-    const contactId = new ObjectId(req.params.id);
-    const response = await mongodb
-      .getDb()
-      .db()
-      .collection('contact')
-      .remove({ _id: contactId }, true);
-    console.log(response);
-    if (response.deletedCount > 0) {
-      res.status(204).send();
-    } else {
-      res.status(500).json(response.error || 'Some error occurred while deleting the contact.');
-    }
-  } catch (err) {
-    res.status(500).json(err);
+  if (!ObjectId.isValid(req.params.id)) {
+    res.status(400).json('Must use a valid contact id to delete a contact.');
+  }
+  const contactId = new ObjectId(req.params.id);
+
+  if (!contactId) {
+    res.status(400).send({ message: 'Invalid Id Supplied' });
+    return;
+  }
+
+  const response = await mongodb
+    .getDb()
+    .db()
+    .collection('contact')
+    .remove({ _id: contactId }, true);
+  console.log(response);
+  if (response.deletedCount > 0) {
+    res.status(204).send();
+  } else {
+    res.status(500).json(response.error || 'Some error occurred while deleting the contact.');
   }
 };
 
